# bangumi_download

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: alist_manager.rs  cas_guard.rs  cli_tools.rs  cloud_manager.rs  config_manager.rs  drop_guard.rs  errors.rs  id.rs  lib.rs  login_with_qrcode.rs  main.rs  main_proc.rs  output_tools.rs  recovery_signal.rs  socket_utils.rs  tests.rs  time_stamp.rs  update_rss.rs
src/cloud/: download.rs
src/crypto/: mod.rs  rsa.rs  xor.rs
src/tui/: animator.rs  app.rs  confirm_widget.rs  editor.rs  events.rs  input_widget.rs  loading_widget.rs  mod.rs  notification_widget.rs  progress_bar.rs  qrcode_widget.rs  ui.rs
tests/: config.json
